--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
           <!-- My Portfolio -->
           <div class="mx-3 my-5 flex w-full transform flex-col gap-3 rounded-xl bg-white p-5 shadow-lg hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50">
             <div class="flex justify-between">
-              <h2 class="text-xl font-bold dark:text-white">Portfolio Website</h2>
+              <h2 class="text-xl font-bold dark:text-white">Portfolio Old</h2>
               <div class="flex items-center">
                 <a href="https://github.com/DanuAlexis/Portfolio-Old" target="_blank" class="rounded p-1 hover:bg-slate-300 hover:dark:bg-slate-700">
                   <svg class="w-5 dark:fill-white md:w-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
