--- a/index.html
+++ b/index.html
@@ -777,7 +777,12 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
               <!-- Pesan -->
               <span class="mb-1 block font-semibold text-sky after:ml-0.5 after:text-pink-500 after:content-['*']">Pesan</span>
               <label for="message">
-                <textarea id="message" name="pesan" class="mb-6 block h-32 w-full rounded border bg-slate-200 p-3 text-sm shadow placeholder:text-dark focus:border-sky focus:outline-none focus:ring-1 focus:ring-sky"></textarea>
+                <textarea
+                  id="message"
+                  name="pesan"
+                  placeholder="Assalamu'alaikum..."
+                  class="mb-6 block h-32 w-full rounded border bg-slate-200 p-3 text-sm shadow placeholder:text-dark focus:border-sky focus:outline-none focus:ring-1 focus:ring-sky"
+                ></textarea>
               </label>
               <!-- Button Kirim -->
               <div class="flex w-full">
@@ -801,7 +806,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
     <!-- Back To Top -->
     <a
       href="#home"
-      class="fixed bottom-5 right-5 hidden h-12 w-12 cursor-pointer items-center justify-center rounded-full border-2 border-solid border-sky bg-white text-sky transition-all duration-200 ease-in-out hover:bg-sky hover:text-white dark:bg-dark dark:hover:bg-sky"
+      class="fixed bottom-10 right-10 hidden h-12 w-12 cursor-pointer items-center justify-center rounded-full border-2 border-solid border-sky bg-white text-sky transition-all duration-200 ease-in-out hover:bg-sky hover:text-white dark:bg-dark dark:hover:bg-sky"
       id="to-top"
     >
       <svg class="w-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
