my portfolio update

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <!-- Header -->
     <header class="absolute top-0 left-0 z-10 flex w-full items-center bg-transparent">
       <div class="container">
-        <div class="relative flex items-center justify-between md:px-16">
+        <div class="relative flex items-center justify-between">
           <!-- Left -->
-          <div class="flex items-center px-2 py-5">
+          <div class="flex items-center px-4 py-5">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 3264.000000 3264.000000" preserveAspectRatio="xMidYMid meet" class="mr-1 h-7 w-7 dark:text-white" fill="currentColor">
               <g transform="translate(0.000000,3264.000000) scale(0.100000,-0.100000)" stroke="none">
                 <path
@@ -315,7 +315,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
           </div>
           <!-- Right -->
           <div class="flex items-center px-4">
-            <button id="hamburger" name="hamburger" type="button" class="absolute right-4 block md:hidden">
+            <button id="hamburger" name="hamburger" type="button" class="absolute right-4 block lg:hidden">
               <span class="hamburger-line origin-top-left transition duration-300 ease-in-out"></span>
               <span class="hamburger-line duration-300 ease-in-out"></span>
               <span class="hamburger-line origin-bottom-left duration-300 ease-in-out"></span>
@@ -323,9 +323,9 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
             <!-- Navbar -->
             <nav
               id="nav-menu"
-              class="absolute right-0 top-full hidden w-full max-w-[250px] rounded-lg bg-white py-5 shadow-lg dark:bg-dark dark:bg-slate-800 md:static md:block md:max-w-full md:rounded-none md:bg-transparent md:shadow-none md:dark:bg-transparent"
+              class="absolute right-0 top-full hidden w-full max-w-[250px] rounded-lg bg-white py-5 shadow-lg dark:bg-dark dark:bg-slate-800 lg:static lg:block lg:max-w-full lg:rounded-none lg:bg-transparent lg:shadow-none lg:dark:bg-transparent"
             >
-              <ul class="block md:flex">
+              <ul class="block lg:flex">
                 <li class="group">
                   <a href="#home" class="mx-6 flex py-2 text-base font-bold text-dark group-hover:text-sky dark:text-white">Home</a>
                 </li>
@@ -821,12 +821,12 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
     <footer class="border-t border-slate-600 bg-dark pt-24 pb-12">
       <div class="container">
         <div class="flex flex-wrap">
-          <div class="mb-12 w-full px-6 font-medium text-slate-300 md:w-1/3">
+          <div class="mb-12 w-full px-4 font-medium text-slate-300 md:w-1/3">
             <h1 class="mb-5 text-4xl font-bold text-white">./rzkyrmdnu</h1>
             <h2 class="mb-2 text-2xl font-bold">Hubungi Kami</h2>
             <p>rizkyramadhanu31@gmail.com</p>
           </div>
-          <div class="mb-12 w-full px-4 md:w-1/3">
+          <div class="mb-12 w-full px-4 md:w-1/3 md:px-16">
             <h1 class="mb-2 text-xl font-semibold text-white underline underline-offset-4">Quick links</h1>
             <ul class="text-slate-300">
               <li>
