--- a/index.html
+++ b/index.html
@@ -822,44 +822,98 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
       <div class="container">
         <div class="flex flex-wrap">
           <div class="mb-12 w-full px-4 font-medium text-slate-300 md:w-1/3">
-            <h1 class="mb-5 text-4xl font-bold text-white">./rzkyrmdnu</h1>
-            <h2 class="mb-2 text-2xl font-bold">Hubungi Kami</h2>
-            <p>rizkyramadhanu31@gmail.com</p>
+            <h1 class="mb-5 text-2xl font-bold text-white">./rzkyrmdnu</h1>
+            <p class="mb-2 flex items-center">
+              <svg class="mr-2 h-4 w-4 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                <path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64s64 28.7 64 64s-28.7 64-64 64z" /></svg
+              >Sukoharjo, Indonesia
+            </p>
+            <p class="flex items-center">
+              <svg class="mr-2 h-4 w-4 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                <path
+                  d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"
+                />
+              </svg>
+              rizkyramadhanu31@gmail.com
+            </p>
           </div>
           <div class="mb-12 w-full px-4 md:w-1/3 md:px-16">
-            <h1 class="mb-2 text-xl font-semibold text-white underline underline-offset-4">Quick links</h1>
+            <h1 class="mb-5 text-2xl font-semibold text-white">Quick links</h1>
             <ul class="text-slate-300">
               <li>
-                <a href="#home" class="mb-1 inline-block text-base hover:text-sky">Home</a>
+                <a href="#home" class="mb-1 flex items-center text-base hover:text-sky"
+                  ><svg class="mr-2 h-4 w-4 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path
+                      d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z"
+                    /></svg
+                  >Home</a
+                >
               </li>
               <li>
-                <a href="#about" class="mb-1 inline-block text-base hover:text-sky">About</a>
+                <a href="#about" class="mb-1 flex items-center text-base hover:text-sky"
+                  ><svg class="mr-2 h-4 w-4 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path
+                      d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z"
+                    /></svg
+                  >About</a
+                >
               </li>
               <li>
-                <a href="#skills" class="mb-1 inline-block text-base hover:text-sky">Skills</a>
+                <a href="#skills" class="mb-1 flex items-center text-base hover:text-sky"
+                  ><svg class="mr-2 h-4 w-4 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path
+                      d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z"
+                    /></svg
+                  >Skills</a
+                >
               </li>
               <li>
-                <a href="#projects" class="mb-1 inline-block text-base hover:text-sky">Projects</a>
+                <a href="#projects" class="mb-1 flex items-center text-base hover:text-sky"
+                  ><svg class="mr-2 h-4 w-4 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path
+                      d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z"
+                    /></svg
+                  >Projects</a
+                >
               </li>
               <li>
-                <a href="#contact" class="mb-1 inline-block text-base hover:text-sky">Contact</a>
+                <a href="#contact" class="mb-1 flex items-center text-base hover:text-sky"
+                  ><svg class="mr-2 h-4 w-4 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path
+                      d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z"
+                    /></svg
+                  >Contact</a
+                >
               </li>
             </ul>
           </div>
           <div class="mb-12 w-full px-4 md:w-1/3">
-            <h1 class="mb-2 text-xl font-semibold text-white underline underline-offset-4">Reach me out on</h1>
-            <ul class="text-slate-300">
+            <h1 class="mb-5 text-2xl font-semibold text-white">Follow Us</h1>
+            <ul class="flex items-center">
               <!-- Fecebook -->
               <li>
-                <a href="https://www.facebook.com/profile.php?id=100073266275396" class="mb-1 inline-block text-base hover:text-sky">Fecebook</a>
+                <a href="https://www.facebook.com/profile.php?id=100073266275396" class="mr-3 flex h-10 w-10 items-center justify-center rounded-full bg-sky hover:bg-opacity-80"
+                  ><svg class="h-5 w-5 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                    <path d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z" /></svg
+                ></a>
               </li>
               <!-- Instagram -->
               <li>
-                <a href="https://instagram.com/danualexis58_" class="mb-1 inline-block text-base hover:text-sky">Instagram</a>
+                <a href="https://instagram.com/danualexis58_" class="mr-3 flex h-10 w-10 items-center justify-center rounded-full bg-sky hover:bg-opacity-80"
+                  ><svg class="h-5 w-5 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                    <path
+                      d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
+                    /></svg
+                ></a>
               </li>
               <!-- Github -->
               <li>
-                <a href="https://github.com/DanuAlexis" class="mb-1 inline-block text-base hover:text-sky">Github</a>
+                <a href="https://github.com/DanuAlexis" class="flex h-10 w-10 items-center justify-center rounded-full bg-sky hover:bg-opacity-80"
+                  ><svg class="h-5 w-5 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
+                    <path
+                      d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
+                    /></svg
+                ></a>
               </li>
             </ul>
           </div>
