--- a/index.html
+++ b/index.html
@@ -435,11 +435,11 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
           <div class="w-full px-6 md:w-1/2 md:px-0 md:text-left">
             <h1 class="mb-3 text-center text-3xl font-black text-white dark:text-dark" data-aos="fade-up" data-aos-duration="1000">About</h1>
             <div class="text-white dark:text-dark" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">
-              <p class="mb-3">
+              <p class="mb-3 font-medium">
                 Hai semuanya, nama saya Rizky Rama Dhanu. Saya seorang Junior Front End Developer, Siswa Tkj, Free/Libre dan Open Source, Coding adalah passion dan hobi saya sejak saya berusia 15 tahun, dan saya menyukai komputer sejak saya
                 masih kecil.
               </p>
-              <p class="mb-6">Saya tinggal di Mertan, Bendosari, Sukoharjo, Indonesia. Saya lahir di Sukoharjo, 31 Oktober 2005. Umur saya 17 tahun. Saya adalah siswa TKJ dari SMK Veteran 1 Sukoharjo.</p>
+              <p class="mb-6 font-medium">Saya tinggal di Mertan, Bendosari, Sukoharjo, Indonesia. Saya lahir di Sukoharjo, 31 Oktober 2005. Umur saya 17 tahun. Saya adalah siswa TKJ dari SMK Veteran 1 Sukoharjo.</p>
               <h1 class="mb-3 text-3xl font-black">Pendidikan</h1>
               <ol class="relative ml-2 border-l-4 border-white dark:border-dark">
                 <li class="mb-10 ml-4">
@@ -451,9 +451,36 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
                     </svg>
                   </div>
                   <h2 class="mb-2 font-extrabold">Sekolah Menengah Kejuruan</h2>
-                  <p>SMK Veteran 1</p>
-                  <p class="mb-1">Teknik Komputer Dan Jaringan</p>
-                  <p class="text-xs">2020 - Sekarang</p>
+                  <p class="font-medium">SMK Veteran 1</p>
+                  <p class="mb-2 font-medium">Teknik Komputer Dan Jaringan</p>
+                  <p class="text-sm font-medium">2020 - Sekarang</p>
+                </li>
+              </ol>
+              <h1 class="mb-3 text-3xl font-black">Pengalaman Kerja</h1>
+              <ol class="relative ml-2 border-l-4 border-white dark:border-dark">
+                <li class="mb-10 ml-4">
+                  <div class="absolute -left-3 flex h-5 w-5 items-center justify-center rounded-full bg-white dark:bg-dark">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="h-3 w-3 text-sky" fill="currentColor">
+                      <path
+                        d="M184 48H328c4.4 0 8 3.6 8 8V96H176V56c0-4.4 3.6-8 8-8zm-56 8V96H64C28.7 96 0 124.7 0 160v96H192 320 512V160c0-35.3-28.7-64-64-64H384V56c0-30.9-25.1-56-56-56H184c-30.9 0-56 25.1-56 56zM512 288H320v32c0 17.7-14.3 32-32 32H224c-17.7 0-32-14.3-32-32V288H0V416c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V288z"
+                      />
+                    </svg>
+                  </div>
+                  <h2 class="mb-2 font-extrabold">Magang</h2>
+                  <p class="font-medium">PT. Jujura</p>
+                  <ul class="ml-4 list-disc">
+                    <li class="font-medium">Belajar laravel</li>
+                  </ul>
+                  <ul class="ml-4 list-disc">
+                    <li class="font-medium">Belajar database mysql</li>
+                  </ul>
+                  <ul class="ml-4 list-disc">
+                    <li class="font-medium">Membantu tim IT membuat tampilan web data karyawan</li>
+                  </ul>
+                  <ul class="mb-2 ml-4 list-disc">
+                    <li class="font-medium">Membuat website consultancy menggunakan laravel dan mysql</li>
+                  </ul>
+                  <p class="text-sm font-medium">Jan 2023 - Mar 2023</p>
                 </li>
               </ol>
             </div>
@@ -593,7 +620,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
                 </a>
               </div>
             </div>
-            <p class="text-gray-600 dark:text-gray-500">Situs web pencarian club sepak bola</p>
+            <p class="font-medium text-gray-600 dark:text-gray-500">Situs web pencarian club sepak bola</p>
             <div class="flex">
               <img class="mr-3 w-8" src="public/icons/css.svg" alt="CSS" title="CSS" />
               <img class="w-8 rounded" src="public/icons/js.svg" alt="javaScript" title="javaScript" />
@@ -620,7 +647,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
                 </a>
               </div>
             </div>
-            <p class="text-gray-600 dark:text-gray-500">Situs web manajemen buku</p>
+            <p class="font-medium text-gray-600 dark:text-gray-500">Situs web manajemen buku</p>
             <div class="flex">
               <img class="mr-3 w-8" src="public/icons/css.svg" alt="CSS" title="CSS" />
               <img class="w-8 rounded" src="public/icons/js.svg" alt="javaScript" title="javaScript" />
@@ -647,7 +674,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
                 </a>
               </div>
             </div>
-            <p class="text-gray-600 dark:text-gray-500">Situs web portfolio lama saya</p>
+            <p class="font-medium text-gray-600 dark:text-gray-500">Situs web portfolio lama saya</p>
             <div class="flex">
               <img class="mr-3 w-9" src="public/icons/bootstrap.svg" alt="Bootstrap" title="Bootstrap" />
               <img class="w-8 rounded" src="public/icons/js.svg" alt="javaScript" title="javaScript" />
@@ -674,7 +701,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
                 </a>
               </div>
             </div>
-            <p class="text-gray-600 dark:text-gray-500">Situs web Emblem dan Stiker Mobil</p>
+            <p class="font-medium text-gray-600 dark:text-gray-500">Situs web Emblem dan Stiker Mobil</p>
             <img class="w-9" src="public/icons/bootstrap.svg" alt="Bootstrap" title="Bootstrap" />
           </div>
           <!-- Todolist App -->
@@ -698,7 +725,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
                 </a>
               </div>
             </div>
-            <p class="text-gray-600 dark:text-gray-500">Situs web Todolist App</p>
+            <p class="font-medium text-gray-600 dark:text-gray-500">Situs web Todolist App</p>
             <div class="flex">
               <img class="mr-3 w-8" src="public/icons/css.svg" alt="CSS" title="CSS" />
               <img class="w-8 rounded" src="public/icons/js.svg" alt="javaScript" title="javaScript" />
@@ -725,7 +752,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
                 </a>
               </div>
             </div>
-            <p class="text-gray-600 dark:text-gray-500">Situs web Game suwit Jawa</p>
+            <p class="font-medium text-gray-600 dark:text-gray-500">Situs web Game suwit Jawa</p>
             <div class="flex">
               <img class="mr-3 w-8" src="public/icons/css.svg" alt="CSS" title="CSS" />
               <img class="w-8 rounded" src="public/icons/js.svg" alt="javaScript" title="javaScript" />
@@ -752,7 +779,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
                 </a>
               </div>
             </div>
-            <p class="text-gray-600 dark:text-gray-500">Situs web consultancy</p>
+            <p class="font-medium text-gray-600 dark:text-gray-500">Situs web consultancy</p>
             <div class="flex">
               <img class="mr-3 w-9" src="public/icons/bootstrap.svg" alt="Bootstrap" title="Bootstrap" />
               <img class="mr-3 w-8" src="public/icons/laravel.svg" alt="Laravel" title="Laravel" />
@@ -780,7 +807,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
                 </a>
               </div>
             </div>
-            <p class="text-gray-600 dark:text-gray-500">Situs web portfolio saya</p>
+            <p class="font-medium text-gray-600 dark:text-gray-500">Situs web portfolio saya</p>
             <div class="flex">
               <img class="mr-3 w-8" src="public/icons/tailwind.svg" alt="Tailwind CSS" title="Tailwind CSS" />
               <img class="w-8 rounded" src="public/icons/js.svg" alt="javaScript" title="javaScript" />
@@ -854,9 +881,9 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
               </label>
               <!-- Button Kirim -->
               <div class="flex w-full">
-                <button type="submit" class="btn-kirim rounded bg-sky py-2 px-4 font-semibold text-white transition duration-200 hover:bg-opacity-80 hover:shadow-lg">Kirim</button>
+                <button type="submit" class="btn-kirim rounded bg-sky py-2 px-4 font-semibold text-white transition duration-200 hover:bg-blue-600 hover:shadow-lg">Kirim</button>
                 <!-- Button Loading -->
-                <button type="button" class="btn-loading flex hidden items-center rounded bg-sky bg-opacity-80 px-4 py-2 text-white shadow-lg" disabled>
+                <button type="button" class="btn-loading flex hidden items-center rounded bg-blue-600 px-4 py-2 text-white shadow-lg" disabled>
                   <svg class="mr-3 h-5 w-5 animate-spin text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                     <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
                     <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
@@ -890,7 +917,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
       <div class="container">
         <div class="flex flex-wrap">
           <div class="mb-12 w-full px-4 font-medium text-slate-300 md:w-1/3">
-            <h1 class="mb-5 text-2xl font-bold text-white">./rzkyrmdnu</h1>
+            <img class="h-32 w-32" src="public/logo-footer.png" alt="" />
             <p class="mb-2 flex items-center">
               <svg class="mr-2 h-4 w-4 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                 <path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64s64 28.7 64 64s-28.7 64-64 64z" /></svg
@@ -960,14 +987,14 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
             <ul class="flex items-center">
               <!-- Fecebook -->
               <li>
-                <a href="https://www.facebook.com/profile.php?id=100073266275396" class="mr-3 flex h-10 w-10 items-center justify-center rounded-full bg-sky hover:bg-opacity-80"
+                <a href="https://www.facebook.com/profile.php?id=100073266275396" class="mr-3 flex h-10 w-10 items-center justify-center rounded-full bg-sky hover:bg-blue-600"
                   ><svg class="h-5 w-5 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
                     <path d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z" /></svg
                 ></a>
               </li>
               <!-- Instagram -->
               <li>
-                <a href="https://instagram.com/danualexis58_" class="mr-3 flex h-10 w-10 items-center justify-center rounded-full bg-sky hover:bg-opacity-80"
+                <a href="https://instagram.com/danualexis58_" class="mr-3 flex h-10 w-10 items-center justify-center rounded-full bg-sky hover:bg-blue-600"
                   ><svg class="h-5 w-5 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                     <path
                       d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
@@ -976,7 +1003,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
               </li>
               <!-- Github -->
               <li>
-                <a href="https://github.com/DanuAlexis" class="flex h-10 w-10 items-center justify-center rounded-full bg-sky hover:bg-opacity-80"
+                <a href="https://github.com/DanuAlexis" class="flex h-10 w-10 items-center justify-center rounded-full bg-sky hover:bg-blue-600"
                   ><svg class="h-5 w-5 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
                     <path
                       d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
@@ -987,7 +1014,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
           </div>
         </div>
         <div class="w-full border-t border-slate-600 pt-10">
-          <h1 class="text-center text-base font-medium text-slate-400">&copy; 2022 Rizky Rama Dhanu | All Rights Reserved</h1>
+          <h1 class="text-center text-base font-medium text-slate-400">&copy; 2023 Rizky Rama Dhanu | All Rights Reserved</h1>
         </div>
       </div>
     </footer>
