--- a/index.html
+++ b/index.html
@@ -786,19 +786,19 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
               <img class="w-12" src="public/icons/mysql.svg" alt="Mysql" title="Mysql" />
             </div>
           </div>
-          <!-- My Portfolio -->
+          <!-- Front-End Roadmap -->
           <div class="mx-3 my-5 flex w-full flex-col gap-3 rounded-xl bg-white p-5 shadow-lg hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50">
             <div class="flex justify-between">
-              <h2 class="text-xl font-bold dark:text-white">Portfolio</h2>
+              <h2 class="text-xl font-bold dark:text-white">Front End Roadmap</h2>
               <div class="flex items-center">
-                <a href="https://github.com/DanuAlexis/rzkyrmdnu-portfolio" target="_blank" class="rounded p-1 hover:bg-slate-300 hover:dark:bg-slate-700" title="Repository">
+                <a href="https://github.com/DanuAlexis/front-end-roadmap" target="_blank" class="rounded p-1 hover:bg-slate-300 hover:dark:bg-slate-700" title="Repository">
                   <svg class="w-5 dark:fill-white md:w-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
                     <path
                       d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                     />
                   </svg>
                 </a>
-                <a href="https://www.rzkyrmdnu.my.id/" target="_blank" class="rounded p-2 hover:bg-slate-300 hover:dark:bg-slate-700" title="Demo">
+                <a href="https://roadmap-fe-rzkyrmdnu.vercel.app/" target="_blank" class="rounded p-2 hover:bg-slate-300 hover:dark:bg-slate-700" title="Demo">
                   <svg class="w-3 dark:fill-white md:w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                     <path
                       d="M288 32c-17.7 0-32 14.3-32 32s14.3 32 32 32h50.7L169.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L384 141.3V192c0 17.7 14.3 32 32 32s32-14.3 32-32V64c0-17.7-14.3-32-32-32H288zM80 64C35.8 64 0 99.8 0 144V400c0 44.2 35.8 80 80 80H336c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v80c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V144c0-8.8 7.2-16 16-16h80c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"
@@ -807,7 +807,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
                 </a>
               </div>
             </div>
-            <p class="font-medium text-gray-600 dark:text-gray-500">Situs web portfolio saya</p>
+            <p class="font-medium text-gray-600 dark:text-gray-500">Roadmap untuk menjadi Front End Developer</p>
             <div class="flex">
               <img class="mr-3 w-8" src="public/icons/tailwind.svg" alt="Tailwind CSS" title="Tailwind CSS" />
               <img class="w-8 rounded" src="public/icons/js.svg" alt="javaScript" title="javaScript" />
