mengganti foto profile

--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
         <div class="flex flex-col items-center justify-center gap-5 md:flex-row md:gap-10">
           <!-- left -->
           <div class="h-48 w-48 overflow-hidden rounded-full bg-white dark:bg-dark md:h-64 md:w-64" data-aos="fade-up" data-aos-duration="1000">
-            <img class="h-80 w-80 object-cover transition-all duration-500 ease-in-out hover:scale-110" src="public/foto-rzky.JPG" alt="" />
+            <img class="h-80 w-80 object-cover transition-all duration-500 ease-in-out hover:scale-110" src="public/foto-rizky.jpg" alt="" />
           </div>
           <!-- Right -->
           <div class="w-full px-6 md:w-1/2 md:px-0 md:text-left">
