mengganti foto profile

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Hai semuanya, nama saya Rizky Rama Dhanu. Saya seorang Junior Front End Developer, dan pelajar jurusan Teknik Komputer & Jaringan di SMK Veteran 1 Sukoharjo." />
     <meta property="og:title" content="Rizky Rama Dhanu - Junior Front End Developer" />
     <meta property="og:description" content="Hai semuanya, nama saya Rizky Rama Dhanu. Saya seorang Junior Front End Developer, dan pelajar jurusan Teknik Komputer & Jaringan di SMK Veteran 1 Sukoharjo." />
-    <meta property="og:image" content="https://www.rzkyrmdnu.my.id/public/logo-footer.png" />
+    <meta property="og:image" content="https://www.rzkyrmdnu.my.id/public/foto-rizky.jpg" />
     <link rel="website icon" href="public/title-rd.ico" type="image/x-icon" />
     <title>RIZKY - Portfolio Website</title>
     <!-- Fonts -->
