--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <meta name="description" content="Hai semuanya, nama saya Rizky Rama Dhanu. Saya seorang Junior Front End Developer, dan pelajar jurusan Teknik Komputer & Jaringan di SMK Veteran 1 Sukoharjo." />
     <meta property="og:title" content="Rizky Rama Dhanu - Junior Front End Developer" />
     <meta property="og:description" content="Hai semuanya, nama saya Rizky Rama Dhanu. Saya seorang Junior Front End Developer, dan pelajar jurusan Teknik Komputer & Jaringan di SMK Veteran 1 Sukoharjo." />
-    <meta property="og:image" content="https://www.rzkyrmdnu.my.id/public/foto-rizky.jpg" />
+    <meta property="og:image" content="https://www.rzkyrmdnu.my.id/public/foto-rizky-2.jpg" />
+    <meta
+      name="keywords"
+      content="rizky rama dhanu, Rizky Rama Dhanu, RIZKY RAMA DHANU, rzkyrmdnu, RZKYRMDNU, RZKYRMDNU Portfolio, rzkyrmdnu portfolio, Rizky Rama Dhanu Portfolio, rizky rama dhanu portfolio, RZKYRMDNU Web, rzkyrmdnu web, Rizky Rama Dhanu Web, rizky rama dhanu web, RZKYRMDNU Web Portfolio, rzkyrmdnu web portfolio, Rizky Rama Dhanu Web Portfolio, rizky rama dhanu web portfolio, rzkyrmdnu my id, rizky web, rizky portofolio, rizky web portofolio, Rizky Web, Rizky Portofolio, Rizky Web Portofolio, rizky portfolio, rizky web portfolio, portofolio rizky, web rizky, portofolio web rizky, rizky programmer, rizky programer"
+    />
     <link rel="website icon" href="public/title-rd.ico" type="image/x-icon" />
     <title>RIZKY - Portfolio Website</title>
     <!-- Fonts -->
@@ -460,7 +464,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
         <div class="flex flex-col items-center justify-center gap-5 md:flex-row md:gap-10">
           <!-- left -->
           <div class="h-48 w-48 overflow-hidden rounded-full bg-white dark:bg-dark md:h-64 md:w-64" data-aos="fade-up" data-aos-duration="1000">
-            <img class="h-80 w-80 object-cover transition-all duration-500 ease-in-out hover:scale-110" src="public/foto-rizky.jpg" alt="" />
+            <img class="h-80 w-80 object-cover transition-all duration-500 ease-in-out hover:scale-110" src="public/foto-rizky.jpg" alt="Foto Rizky" />
           </div>
           <!-- Right -->
           <div class="w-full px-6 md:w-1/2 md:px-0 md:text-left">
@@ -950,7 +954,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
       <div class="container">
         <div class="flex flex-wrap">
           <div class="mb-12 w-full px-4 font-medium text-slate-300 md:w-1/3">
-            <img class="h-32 w-32" src="public/logo-footer.png" alt="" />
+            <img class="h-32 w-32" src="public/logo-footer.png" alt="Logo Footer" />
             <p class="mb-2 flex items-center">
               <svg class="mr-2 h-4 w-4 text-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" fill="currentColor">
                 <path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64s64 28.7 64 64s-28.7 64-64 64z" />
