--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
             </div>
             <a
               class="flex w-fit items-center justify-center rounded-md bg-sky px-2 py-2 font-medium text-white transition duration-200 ease-in-out hover:bg-opacity-80"
-              href="https://drive.google.com/file/d/1QRheCyPCeW-CRzhgdkQQnEBYIEwihN_9/view?usp=share_link"
+              href="https://drive.google.com/file/d/1j8-KzjFsQEUxlktw8AhOyDRoTTLqkhKZ/view?usp=share_link"
               target="_blank"
             >
               <svg class="mr-1 w-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -514,6 +514,12 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
                   </ul>
                   <ul class="mb-2 ml-4 list-disc">
                     <li class="font-medium">Membuat website consultancy menggunakan laravel dan mysql</li>
+                  </ul>
+                  <ul class="mb-2 ml-4 list-disc">
+                    <li class="font-medium">Mengatasi leptop yang mati</li>
+                  </ul>
+                  <ul class="mb-2 ml-4 list-disc">
+                    <li class="font-medium">Mengatasi jaringan wifi yang tidak tersambung</li>
                   </ul>
                   <p class="text-sm font-medium">Jan 2023 - Mar 2023</p>
                 </li>
